♻️ Upgrade to render
The 'include' tag has been superceeded by 'render'. See https://help.shopify.com/en/themes/liquid/tags/theme-tags#render for more.

--- a/src/layout/gift_card.liquid
+++ b/src/layout/gift_card.liquid
@@ -17,9 +17,9 @@
 
   <meta name="description" content="{{ 'gift_cards.issued.subtext' | t }}">
 
-  {% include 'style-tags', layout: 'gift_card' %}
-  {% include 'css-variables' %}
-  {% include 'script-tags', layout: 'gift_card' %}
+  {% render 'style-tags', layout: 'gift_card' %}
+  {% render 'css-variables' %}
+  {% render 'script-tags', layout: 'gift_card' %}
 
   {%- comment -%}
     Placing the {{ content_for_header }} tag in a conditional avoids the
