--- a/src/layout/password.liquid
+++ b/src/layout/password.liquid
@@ -17,10 +17,10 @@
     <meta name="description" content="{{ page_description | escape }}">
   {% endif %}
 
-  {% include 'social-meta-tags' %}
-  {% include 'style-tags', layout: 'password' %}
-  {% include 'css-variables' %}
-  {% include 'script-tags', layout: 'password' %}
+  {% render 'social-meta-tags' %}
+  {% render 'style-tags', layout: 'password' %}
+  {% render 'css-variables' %}
+  {% render 'script-tags', layout: 'password' %}
 
   <script>
     document.documentElement.className = document.documentElement.className.replace('no-js', '');
