--- a/src/sections/blog-posts.liquid
+++ b/src/sections/blog-posts.liquid
@@ -33,7 +33,7 @@
         {%- endcomment -%}
         <a href="{{ article.url }}">
           {% if article.image %}
-            {% include 'responsive-image' with
+            {% render 'responsive-image' with
                 image: article.image,
                 max_width: 400,
                 max_height: 400
