--- a/src/sections/product.liquid
+++ b/src/sections/product.liquid
@@ -10,7 +10,7 @@
         {%- endunless -%}
       {% endcapture %}
 
-      {% include 'responsive-image' with
+      {% render 'responsive-image' with
         image: image,
         max_width: 700,
         max_height: 800,
@@ -129,7 +129,7 @@
     </div>
 
     {% if section.settings.show_share_buttons %}
-      {% include 'social-sharing', share_title: product.title, share_permalink: product.url, share_image: product %}
+      {% render 'social-sharing', share_title: product.title, share_permalink: product.url, share_image: product %}
     {% endif %}
   </div>
 </section>
