--- a/src/snippets/responsive-image.liquid
+++ b/src/snippets/responsive-image.liquid
@@ -17,7 +17,7 @@
 
     Usage:
     In your liquid template file, copy the following line
-    - {% include 'responsive-image' with image: featured_image, image_class: "css-class", wrapper_class: "wrapper-css-class", max_width: 700, max_height: 800 %}
+    - {% render 'responsive-image' with image: featured_image, image_class: "css-class", wrapper_class: "wrapper-css-class", max_width: 700, max_height: 800 %}
 {%- endcomment -%}
 
 {%- comment -%} Added incremental number to avoid conflict styling code when the same images are using this snippet {%- endcomment -%}
