--- a/src/sections/collection-list.liquid
+++ b/src/sections/collection-list.liquid
@@ -18,7 +18,7 @@
       {% if collection.image != blank or collection.products.first != blank %}
         {%- assign image_object = collection.image | default: collection.products.first.featured_image -%}
         <div class="collection-list__image">
-          {% include 'responsive-image' with
+          {% render 'responsive-image' with
             image: image_object,
             max_width: 480,
             max_height: 480
@@ -35,7 +35,7 @@
   {% endfor %}
 
   {% if section.blocks.size == 0 %}
-    {% include 'no-blocks' %}
+    {% render 'no-blocks' %}
   {% endif %}
 </section>
 
