--- a/src/sections/featured-collection.liquid
+++ b/src/sections/featured-collection.liquid
@@ -19,7 +19,7 @@
     <a href="{{ product.url | within: collection }}" class="featured-collection-item">
       {% if product.featured_image != blank %}
         <div class="featured-collection__image">
-          {% include 'responsive-image' with
+          {% render 'responsive-image' with
             image: product.featured_image,
             max_width: 480,
             max_height: 480
