--- a/src/sections/featured-product.liquid
+++ b/src/sections/featured-product.liquid
@@ -16,7 +16,7 @@
       {%- endunless -%}
     {% endcapture %}
 
-    {% include 'responsive-image' with
+    {% render 'responsive-image' with
       image: image,
       max_width: 700,
       max_height: 800,
@@ -121,7 +121,7 @@
   </div>
 
   {% if section.settings.show_share_buttons %}
-    {% include 'social-sharing', share_title: product.title, share_permalink: product.url, share_image: product %}
+    {% render 'social-sharing', share_title: product.title, share_permalink: product.url, share_image: product %}
   {% endif %}
 
   {% unless product == empty %}
