--- a/src/snippets/responsive-bg-image.liquid
+++ b/src/snippets/responsive-bg-image.liquid
@@ -10,7 +10,7 @@
     Usage:
     In your liquid template file, copy the following line
 
-    <div class="lazyload" data-bgset="{% include 'responsive-bg-image', image: article.image %}"></div>
+    <div class="lazyload" data-bgset="{% render 'responsive-bg-image', image: article.image %}"></div>
 {% endcomment %}
 {%- if image != blank -%}
   {%- if image.width > 180 -%}{{ image | img_url: '180x' }} 180w {{ 180 | divided_by: image.aspect_ratio | round }}h,{%- endif -%}
