🐛 Heading weight variable fix

--- a/src/snippets/css-variables.liquid
+++ b/src/snippets/css-variables.liquid
@@ -15,7 +15,7 @@
     --color-border: {{ settings.color_body_text | color_lighten: 50 }};
 
     --font-heading: {{ settings.font_heading.family }}, {{ settings.font_heading.fallback_families }};
-    --font-body-weight: {{ settings.font_heading.weight }};
+    --font-heading-weight: {{ settings.font_heading.weight }};
     --font-body: {{ settings.font_body.family }}, {{ settings.font_body.fallback_families }};
     --font-body-weight: {{ settings.font_body.weight }};
     --font-body-style: {{ settings.font_body.style }};
