--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -22,7 +22,7 @@ $color-border: var(--color-border);
 
 // Typography
 $font-heading: var(--font-heading);
-$font-heading-weight: var(--font-body-weight);
+$font-heading-weight: var(--font-heading-weight);
 $font-body: var(--font-body);
 $font-body-weight: var(--font-body-weight);
 $font-body-style: var(--font-body-style);
