--- a/src/templates/password.liquid
+++ b/src/templates/password.liquid
@@ -23,10 +23,13 @@
     </ul>
   {% else %}
     <h4>{{ 'general.password_page.signup_form_heading' | t }}</h4>
+
     <input type="hidden" name="contact[tags]" value="prospect, password page">
-    <label for="email">
+
+    <label for="Email">
       {{ 'general.password_page.signup_form_email_label' | t }}
     </label>
+
     <input type="email"
       name="contact[email]"
       id="Email"
@@ -34,6 +37,7 @@
       autocomplete="off"
       autocapitalize="off"
       placeholder="{{ 'general.password_page.signup_form_email_placeholder' | t }}">
+
     <button type="submit" name="commit" class="button">
       {{ 'general.password_page.signup_form_submit' | t }}
     </button>
